# cang-cli

./: ARCHITECTURE.md  CLAUDE.md  MANIFEST.in  pyproject.toml  readme.md
agent/: AGENT.md  AGENT_README.md  IDENTITY.md  MEMORY.md.template  OVERVIEW.md  PROMPT.md  SOUL.md  TOOLS.md  USER.md
agent/skills/budget-status/: SKILL.md
agent/skills/check-balance/: SKILL.md
agent/skills/invest-profit/: SKILL.md
agent/skills/monthly-report/: SKILL.md
agent/skills/net-worth/: SKILL.md
agent/skills/record-expense/: SKILL.md
agent/skills/record-income/: SKILL.md
agent/skills/set-budget/: SKILL.md
src/cang/: __init__.py  __main__.py  cli.py  const.py  exporter.py  importer.py
src/cang/asset/: __init__.py  cli.py  repository.py
src/cang/asset/commands/: __init__.py  add.py  delete.py  get.py  init.py  list_cmd.py  networth.py  schema.py  update.py
src/cang/budget/: __init__.py  cli.py  repository.py
src/cang/budget/commands/: __init__.py  budget.py  history.py  init.py  schema.py  status.py
src/cang/db/: __init__.py  connection.py  schema.py  utils.py
src/cang/fin/: __init__.py  cli.py  repository.py
src/cang/fin/commands/: __init__.py  account.py  category.py  schema.py  search.py  tags.py  transfer.py  tx.py
src/cang/invest/: __init__.py  cli.py  repository.py
src/cang/invest/commands/: __init__.py  holdings.py  profit.py  schema.py  tx.py
src/cang/models/: __init__.py
src/cang/output/: __init__.py  data_import.py  export.py  formatter.py
tests/: TESTING_GUIDE.md  TEST_STRATEGY.md  __init__.py  assertions.py  conftest.py
tests/factories/: __init__.py
tests/helpers/: __init__.py
tests/integration/: test_asset_cli.py  test_budget_cli.py  test_fin_cli.py
tests/unit/asset/: test_asset_repository.py
tests/unit/budget/: __init__.py  test_budget_repository.py
tests/unit/db/: test_connection.py  test_schema.py  test_utils.py
tests/unit/fin/: __init__.py  test_fin_repository.py
tests/unit/fin/test_commands/: __init__.py  test_account.py  test_category.py  test_transfer.py  test_tx.py
tests/unit/invest/: test_invest_repository.py
tests/unit/output/: test_formatter.py
